--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ cmake/TBBConfigVersion.cmake
 .svn
 crash*
 *.tmp
+/.vs
 
 
 /.build
@@ -94,4 +95,4 @@ crash*
 /debug
 /*.dblite
 /tbb.cmake.*
-/.vs
+/excons.cache
